[package]
edition = "2021"
name = "aws-nitro-enclaves-nsm-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"
aws-nitro-enclaves-nsm-api = "0.4.0"
serde_bytes = "0.11.17"

[build-dependencies]
napi-build = "2.1.6"

[profile.release]
lto = true
